OWL: screenshot of the training framework

--- a/OWL/owl_huggingface_inference.ipynb
+++ b/OWL/owl_huggingface_inference.ipynb
@@ -8,7 +8,9 @@
     "===\n",
     "\n",
     " * Paper: https://arxiv.org/abs/2205.06230\n",
-    "\n"
+    "\n",
+    "\n",
+    "![](../assets/owl-training-framework.png)\n"
    ]
   },
   {
@@ -224,13 +226,6 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
