OWL: fixed the heading of OWL notebook

--- a/OWL/owl_huggingface_inference.ipynb
+++ b/OWL/owl_huggingface_inference.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "OneFormer\n",
+    "OWL\n",
     "===\n",
     "\n",
     " * Paper: https://arxiv.org/abs/2205.06230\n",
