BLIP: inference with ITM

--- a/BLIP/blip_huggingface_inference.ipynb
+++ b/BLIP/blip_huggingface_inference.ipynb
@@ -209,6 +209,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Image-Text-Matching"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from PIL import Image\n",
+    "from transformers import BlipProcessor, BlipForImageTextRetrieval\n",
+    "\n",
+    "processor = BlipProcessor.from_pretrained(\n",
+    "    \"Salesforce/blip-itm-base-flickr\"\n",
+    ")\n",
+    "model = BlipForImageTextRetrieval.from_pretrained(\n",
+    "    \"Salesforce/blip-itm-base-flickr\"\n",
+    ").to(\"cuda\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.3301, 0.4990, 0.5390]], device='cuda:0')\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_path = \"../samples/bicycle.jpg\"\n",
+    "\n",
+    "image = Image.open(image_path).convert(\"RGB\")\n",
+    "image = image.resize((image.width // 4, image.height // 4))\n",
+    "\n",
+    "\n",
+    "texts = [\n",
+    "    \"A dog running on the beach.\",\n",
+    "    \"A bicycle parked on the sidewalk.\",\n",
+    "    \"A bicyle parked next to a blue door.\"\n",
+    "]\n",
+    "inputs = processor(\n",
+    "    image, texts,\n",
+    "    padding=True, return_tensors=\"pt\"\n",
+    ").to(\"cuda\")\n",
+    "\n",
+    "itm_scores = model(**inputs)[0]\n",
+    "with torch.no_grad():\n",
+    "    cosine_score = model(**inputs, use_itm_head=False)[0]\n",
+    "print(cosine_score)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
