CLIPseg: load model and inference function

--- a/CLIPseg/clipseg_huggingface_inference.ipynb
+++ b/CLIPseg/clipseg_huggingface_inference.ipynb
@@ -21,8 +21,60 @@
     "pip install torch torchvision\n",
     "pip install transformers\n",
     "pip install matplotlib\n",
-    "pip install supervision\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pyml/anaconda3/envs/py311/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "import torchvision\n",
+    "from transformers import CLIPSegProcessor, CLIPSegForImageSegmentation\n",
+    "\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "processor = CLIPSegProcessor.from_pretrained(\n",
+    "    \"CIDAS/clipseg-rd64-refined\"\n",
+    ")\n",
+    "model = CLIPSegForImageSegmentation.from_pretrained(\n",
+    "    \"CIDAS/clipseg-rd64-refined\"\n",
+    ").to(device)\n",
+    "model.eval();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inference(image, prompts, device=\"cpu\"):\n",
+    "    inputs = processor(\n",
+    "        text=prompts, images=[image] * len(prompts),\n",
+    "        padding=\"max_length\", return_tensors=\"pt\"\n",
+    "    )\n",
+    "    inputs = {k: v.to(device) for k, v in inputs.items()}\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        outputs = model(**inputs)\n",
+    "    preds = outputs.logits.unsqueeze(1)\n",
+    "\n",
+    "    return preds"
    ]
   },
   {
