FLAVA: image & text embeddings

--- a/FLAVA/flava_huggingface_inference.ipynb
+++ b/FLAVA/flava_huggingface_inference.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -41,13 +41,18 @@
     "import torch\n",
     "from transformers import FlavaProcessor, FlavaModel\n",
     "\n",
-    "model = FlavaModel.from_pretrained(\"facebook/flava-full\")\n",
-    "processor = FlavaProcessor.from_pretrained(\"facebook/flava-full\")"
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "processor = FlavaProcessor.from_pretrained(\n",
+    "    \"facebook/flava-full\"\n",
+    ")\n",
+    "model = FlavaModel.from_pretrained(\n",
+    "    \"facebook/flava-full\"\n",
+    ").to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +87,7 @@
     "    padding=\"max_length\",\n",
     "    max_length=77\n",
     ")\n",
-    "\n",
+    "inputs = {k: v.to(device) for k, v in inputs.items()}\n",
     "with torch.no_grad():\n",
     "    outputs = model(**inputs)\n",
     "image_embeddings = outputs.image_embeddings\n",
@@ -91,6 +96,65 @@
     "print(\"image embeddings shape:\", image_embeddings.shape)\n",
     "print(\"text embeddings shape:\", text_embeddings.shape)\n",
     "print(\"multimodal embeddings shape:\", multimodal_embeddings.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pyml/anaconda3/envs/py311/lib/python3.11/site-packages/transformers/models/flava/feature_extraction_flava.py:28: FutureWarning: The class FlavaFeatureExtractor is deprecated and will be removed in version 5 of Transformers. Please use FlavaImageProcessor instead.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "image embeddings shape: torch.Size([2, 197, 768])\n",
+      "text embeddings shape: torch.Size([2, 77, 768])\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Pimage-only\n",
+    "from transformers import FlavaFeatureExtractor\n",
+    "## text-only\n",
+    "from transformers import BertTokenizer\n",
+    "\n",
+    "feature_extractor = FlavaFeatureExtractor.from_pretrained(\n",
+    "    \"facebook/flava-full\"\n",
+    ")\n",
+    "inputs = feature_extractor(\n",
+    "    images=[image1, image2], return_tensors=\"pt\"\n",
+    ")\n",
+    "inputs = {k: v.to(device) for k, v in inputs.items()}\n",
+    "with torch.no_grad():\n",
+    "    outputs = model(**inputs)\n",
+    "image_embeddings = outputs.image_embeddings\n",
+    "\n",
+    "\n",
+    "tokenizer = BertTokenizer.from_pretrained(\"facebook/flava-full\")\n",
+    "inputs = tokenizer(\n",
+    "    [\n",
+    "        \"a photo of fruits and vegetables\",\n",
+    "        \"a photo of indoor plants\"\n",
+    "    ],\n",
+    "    return_tensors=\"pt\",\n",
+    "    padding=\"max_length\",\n",
+    "    max_length=77\n",
+    ")\n",
+    "inputs = {k: v.to(device) for k, v in inputs.items()}\n",
+    "with torch.no_grad():\n",
+    "    outputs = model(**inputs)\n",
+    "text_embeddings = outputs.text_embeddings\n",
+    "\n",
+    "print(\"image embeddings shape:\", image_embeddings.shape)\n",
+    "print(\"text embeddings shape:\", text_embeddings.shape)\n"
    ]
   },
   {
