SAM: screenshot of the model

--- a/SAM/sam_huggingface_inference.ipynb
+++ b/SAM/sam_huggingface_inference.ipynb
@@ -7,7 +7,9 @@
     "Segment Anything Model (SAM)\n",
     "===\n",
     "\n",
-    " * Paper: https://arxiv.org/abs/2304.02643"
+    " * Paper: https://arxiv.org/abs/2304.02643\n",
+    "\n",
+    "![SAM model](../assets/sam-model-overview.png)"
    ]
   },
   {
