CLIP: image and text embeddings

--- a/CLIP/clip_huggingface_inference.ipynb
+++ b/CLIP/clip_huggingface_inference.ipynb
@@ -22,8 +22,237 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "494235958cf24543b8a276ced825cc18",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/4.19k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "96ce77289d7b40e4a8df0a56766742f4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "pytorch_model.bin:   0%|          | 0.00/605M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "159b6a5e732e479ba69feda3f697a562",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "preprocessor_config.json:   0%|          | 0.00/316 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a264dfca7ac94eadaede6a30f711b620",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/592 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b5b87c247e74425fa349e588947ee491",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.json:   0%|          | 0.00/862k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e2982df766f042dd8971629333b9e904",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/605M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f874f57238d8407ab2640aaf4a6ff483",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "merges.txt:   0%|          | 0.00/525k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "afc5bce2349e417791ac378fbaf0c45d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json:   0%|          | 0.00/2.22M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cb6ea9d397354b9b902d1df24f2c2a83",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "special_tokens_map.json:   0%|          | 0.00/389 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from PIL import Image\n",
+    "import torch\n",
+    "from transformers import CLIPProcessor, CLIPModel\n",
+    "\n",
+    "model = CLIPModel.from_pretrained(\n",
+    "    \"openai/clip-vit-base-patch32\"\n",
+    ")\n",
+    "processor = CLIPProcessor.from_pretrained(\n",
+    "    \"openai/clip-vit-base-patch32\"\n",
+    ")\n",
+    "\n",
+    "device = torch.device(\n",
+    "    \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    ")\n",
+    "model = model.to(device)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Image Embedding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1068, 1137)\n",
+      "torch.Size([1, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_path = \"../samples/plants.jpg\"\n",
+    "\n",
+    "image = Image.open(image_path).convert(\"RGB\")\n",
+    "print(image.size)\n",
+    "\n",
+    "inputs = processor(images=image, return_tensors=\"pt\", padding=True)\n",
+    "print(inputs.keys())\n",
+    "inputs = {k: v.to(device) for k, v in inputs.items()}\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    img_embeds = model.get_image_features(\n",
+    "        pixel_values=inputs[\"pixel_values\"]\n",
+    "    )\n",
+    "print(img_embeds.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Text embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['input_ids', 'attention_mask'])\n",
+      "torch.Size([2, 12])\n",
+      "torch.Size([2, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "texts = [\"a photo of a plant\", \"a phot of a cat sitting on a couch\"]\n",
+    "\n",
+    "inputs = processor(\n",
+    "    text=texts, return_tensors=\"pt\", padding=True\n",
+    ")\n",
+    "inputs = {k: v.to(device) for k, v in inputs.items()}\n",
+    "print(inputs.keys())\n",
+    "print(inputs[\"input_ids\"].shape)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    txt_embeds = model.get_text_features(\n",
+    "        input_ids=inputs[\"input_ids\"]\n",
+    "    )\n",
+    "print(txt_embeds.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
