--- a/CLIP/clip_huggingface_inference.ipynb
+++ b/CLIP/clip_huggingface_inference.ipynb
@@ -23,138 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "494235958cf24543b8a276ced825cc18",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/4.19k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "96ce77289d7b40e4a8df0a56766742f4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "pytorch_model.bin:   0%|          | 0.00/605M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "159b6a5e732e479ba69feda3f697a562",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "preprocessor_config.json:   0%|          | 0.00/316 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a264dfca7ac94eadaede6a30f711b620",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/592 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5b87c247e74425fa349e588947ee491",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "vocab.json:   0%|          | 0.00/862k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e2982df766f042dd8971629333b9e904",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors:   0%|          | 0.00/605M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f874f57238d8407ab2640aaf4a6ff483",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "merges.txt:   0%|          | 0.00/525k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "afc5bce2349e417791ac378fbaf0c45d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/2.22M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb6ea9d397354b9b902d1df24f2c2a83",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/389 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from PIL import Image\n",
+    "import numpy as np\n",
     "import torch\n",
     "from transformers import CLIPProcessor, CLIPModel\n",
     "\n",
@@ -180,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -188,6 +62,8 @@
      "output_type": "stream",
      "text": [
       "(1068, 1137)\n",
+      "dict_keys(['pixel_values'])\n",
+      "torch.Size([1, 3, 224, 224])\n",
       "torch.Size([1, 512])\n"
      ]
     }
@@ -199,14 +75,15 @@
     "print(image.size)\n",
     "\n",
     "inputs = processor(images=image, return_tensors=\"pt\", padding=True)\n",
-    "print(inputs.keys())\n",
     "inputs = {k: v.to(device) for k, v in inputs.items()}\n",
+    "print(inputs.keys())\n",
+    "print(inputs[\"pixel_values\"].shape)\n",
     "\n",
     "with torch.no_grad():\n",
     "    img_embeds = model.get_image_features(\n",
     "        pixel_values=inputs[\"pixel_values\"]\n",
     "    )\n",
-    "print(img_embeds.shape)"
+    "print(img_embeds.shape)\n"
    ]
   },
   {
@@ -218,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -226,13 +103,17 @@
      "output_type": "stream",
      "text": [
       "dict_keys(['input_ids', 'attention_mask'])\n",
-      "torch.Size([2, 12])\n",
-      "torch.Size([2, 512])\n"
+      "torch.Size([3, 12])\n",
+      "torch.Size([3, 512])\n"
      ]
     }
    ],
    "source": [
-    "texts = [\"a photo of a plant\", \"a phot of a cat sitting on a couch\"]\n",
+    "texts = [\n",
+    "    \"a photo of an indoor plant\",\n",
+    "    \"a photo of two indoor plant in a golden vase\",\n",
+    "    \"a phot of a cat sitting on a couch\"\n",
+    "]\n",
     "\n",
     "inputs = processor(\n",
     "    text=texts, return_tensors=\"pt\", padding=True\n",
@@ -246,6 +127,100 @@
     "        input_ids=inputs[\"input_ids\"]\n",
     "    )\n",
     "print(txt_embeds.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Image-Text Matching"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before normalization:\n",
+      "[[10.161607]]\n",
+      "[[9.406647]\n",
+      " [7.691049]\n",
+      " [8.129713]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "img_embeds_array = img_embeds.detach().cpu().numpy()\n",
+    "txt_embeds_array = txt_embeds.detach().cpu().numpy()\n",
+    "# print L2 norm of the embeddings\n",
+    "print(\"Before normalization:\")\n",
+    "print(np.linalg.norm(img_embeds_array, ord=2, axis=-1, keepdims=True))\n",
+    "print(np.linalg.norm(txt_embeds_array, ord=2, axis=-1, keepdims=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before normalization:\n",
+      "[10.161607]\n",
+      "[9.406647 7.691049 8.129713]\n",
+      "\n",
+      "After normalization:\n",
+      "[1.]\n",
+      "[1. 1. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "img_embeds_array = img_embeds.detach().cpu().numpy()\n",
+    "txt_embeds_array = txt_embeds.detach().cpu().numpy()\n",
+    "\n",
+    "# print L2 norm of the embeddings\n",
+    "print(\"Before normalization:\")\n",
+    "print(np.linalg.norm(img_embeds_array, ord=2, axis=-1))\n",
+    "print(np.linalg.norm(txt_embeds_array, ord=2, axis=-1))\n",
+    "\n",
+    "# normalize embeddings by L2 norm\n",
+    "img_embeds_array /= np.linalg.norm(\n",
+    "    img_embeds_array, axis=-1, ord=2, keepdims=True\n",
+    ")\n",
+    "txt_embeds_array /= np.linalg.norm(\n",
+    "    txt_embeds_array, axis=-1, ord=2, keepdims=True\n",
+    ")\n",
+    "\n",
+    "print(\"\\nAfter normalization:\")\n",
+    "# print L2 norm of the normalized embeddings\n",
+    "print(np.linalg.norm(img_embeds_array, ord=2, axis=-1))\n",
+    "print(np.linalg.norm(txt_embeds_array, ord=2, axis=-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.28259343 0.31666955 0.11867781]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate similarity between image and text\n",
+    "similarity = np.inner(img_embeds_array, txt_embeds_array)\n",
+    "print(similarity)"
    ]
   },
   {
