CLIP: combined forward

--- a/CLIP/clip_huggingface_inference.ipynb
+++ b/CLIP/clip_huggingface_inference.ipynb
@@ -224,6 +224,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Forward call with combined image-text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1068, 1137)\n",
+      "dict_keys(['input_ids', 'attention_mask', 'pixel_values'])\n",
+      "torch.Size([1, 3, 224, 224])\n",
+      "torch.Size([3, 12])\n",
+      "torch.Size([3, 512])\n",
+      "torch.Size([1, 512])\n",
+      "tensor([[28.2593, 31.6670, 11.8678]], device='cuda:0')\n",
+      "tensor([[28.2593],\n",
+      "        [31.6670],\n",
+      "        [11.8678]], device='cuda:0')\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_path = \"../samples/plants.jpg\"\n",
+    "texts = [\n",
+    "    \"a photo of an indoor plant\",\n",
+    "    \"a photo of two indoor plant in a golden vase\",\n",
+    "    \"a phot of a cat sitting on a couch\"\n",
+    "]\n",
+    "\n",
+    "image = Image.open(image_path).convert(\"RGB\")\n",
+    "print(image.size)\n",
+    "\n",
+    "inputs = processor(\n",
+    "    images=image, text=texts,\n",
+    "    return_tensors=\"pt\", padding=True\n",
+    ")\n",
+    "inputs = {k: v.to(device) for k, v in inputs.items()}\n",
+    "print(inputs.keys())\n",
+    "print(inputs[\"pixel_values\"].shape)\n",
+    "print(inputs[\"input_ids\"].shape)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    outputs = model(**inputs)\n",
+    "print(outputs[\"text_embeds\"].shape)\n",
+    "print(outputs[\"image_embeds\"].shape)\n",
+    "print(outputs[\"logits_per_image\"])\n",
+    "print(outputs[\"logits_per_text\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "odict_keys(['logits_per_image', 'logits_per_text', 'text_embeds', 'image_embeds', 'text_model_output', 'vision_model_output'])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outputs.keys()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
