LLaVA: pricess input text

--- a/LLaVA/llava_huggingface_inference.ipynb
+++ b/LLaVA/llava_huggingface_inference.ipynb
@@ -23,13 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02cc7ed82f65429890071a29626f636f",
+       "model_id": "699bafd1de284120a2a02d4e94213eac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -60,6 +60,51 @@
     "# Load the model in half-precision\n",
     "model = LlavaForConditionalGeneration.from_pretrained(\"llava-hf/llava-1.5-7b-hf\", torch_dtype=torch.float16, device_map=\"auto\")\n",
     "processor = AutoProcessor.from_pretrained(\"llava-hf/llava-1.5-7b-hf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['input_ids', 'attention_mask', 'pixel_values'])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image1 = Image.open(\"../samples/fruits-01.jpg\")\n",
+    "\n",
+    "def load_image_as_base64(image):\n",
+    "    buffer = BytesIO()\n",
+    "    image.save(buffer, format=\"JPEG\")\n",
+    "    return base64.b64encode(buffer.getvalue()).decode(\"utf-8\")\n",
+    "\n",
+    "image1_base64 = load_image_as_base64(image1)\n",
+    "\n",
+    "conversation = [\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": [\n",
+    "            {\"type\": \"image\", \"url\": \"data:image/jpeg;base64,\" + image1_base64},\n",
+    "            {\"type\": \"text\", \"text\": \"What is shown in this image?\"},\n",
+    "        ],\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "inputs = processor.apply_chat_template(\n",
+    "    conversation, add_generation_prompt=True,\n",
+    "    tokenize=True, return_dict=True, return_tensors=\"pt\"\n",
+    ")\n",
+    "inputs = inputs.to(\"cuda:0\", torch.float16)\n",
+    "\n",
+    "inputs.keys()"
    ]
   }
  ],
