LLaVA: inference on image2

--- a/LLaVA/llava_huggingface_inference.ipynb
+++ b/LLaVA/llava_huggingface_inference.ipynb
@@ -106,6 +106,54 @@
     "\n",
     "inputs.keys()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "USER:  \n",
+      "What is shown in this image? ASSISTANT: The image shows a bowl filled with various fruits and vegetables, including blueberries, raspberries, cucumbers, and possibly other fruits and vegetables.\n"
+     ]
+    }
+   ],
+   "source": [
+    "output = model.generate(**inputs, max_new_tokens=100)\n",
+    "print(processor.decode(output[0], skip_special_tokens=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image2 = Image.open(\"../samples/plants.jpg\")\n",
+    "image2_base64 = load_image_as_base64(image2)\n",
+    "\n",
+    "conversation = [\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": [\n",
+    "            {\"type\": \"image\", \"url\": \"data:image/jpeg;base64,\" + image2_base64},\n",
+    "            {\"type\": \"text\", \"text\": \"What is shown in this image?\\n\"},\n",
+    "        ],\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "inputs = processor.apply_chat_template(\n",
+    "    conversation, add_generation_prompt=True,\n",
+    "    tokenize=True, return_dict=True, return_tensors=\"pt\"\n",
+    ")\n",
+    "inputs = inputs.to(\"cuda:0\", torch.float16)\n",
+    "\n",
+    "output = model.generate(**inputs, max_new_tokens=100)\n",
+    "print(processor.decode(output[0], skip_special_tokens=True))"
+   ]
   }
  ],
  "metadata": {
