FLUX: loaded the model

--- a/FLUX/flux_huggingface_inference.ipynb
+++ b/FLUX/flux_huggingface_inference.ipynb
@@ -17,10 +17,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d1ef64ae1c504dd19f9f999a54f985b8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading pipeline components...:   0%|          | 0/7 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You set `add_prefix_space`. The tokenizer needs to be converted from the slow tokenizers\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a93e0d11bf0c4c6e9ca0843f7be3e287",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from diffusers import FluxPipeline\n",
+    "\n",
+    "pipe = FluxPipeline.from_pretrained(\n",
+    "    \"black-forest-labs/FLUX.1-dev\",\n",
+    "    torch_dtype=torch.bfloat16\n",
+    ")\n",
+    "pipe.enable_model_cpu_offload()\n",
+    "# save some VRAM by offloading the model to CPU.\n",
+    "# Remove this if you have enough GPU power"
+   ]
   }
  ],
  "metadata": {
