AnimateDiff: running inference

--- a/AnimateDiff/animatediff_huggingface_inference.ipynb
+++ b/AnimateDiff/animatediff_huggingface_inference.ipynb
@@ -85,9 +85,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "07bdb779945547f5bfd569bc18de49af",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/8 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "AnimateDiffPipelineOutput(frames=[[<PIL.Image.Image image mode=RGB size=512x512 at 0x7F48305B0150>, <PIL.Image.Image image mode=RGB size=512x512 at 0x7F4830523A10>, <PIL.Image.Image image mode=RGB size=512x512 at 0x7F4830523890>, <PIL.Image.Image image mode=RGB size=512x512 at 0x7F4830594650>, <PIL.Image.Image image mode=RGB size=512x512 at 0x7F4830597590>, <PIL.Image.Image image mode=RGB size=512x512 at 0x7F4830596290>, <PIL.Image.Image image mode=RGB size=512x512 at 0x7F4830576AD0>, <PIL.Image.Image image mode=RGB size=512x512 at 0x7F4830575A50>, <PIL.Image.Image image mode=RGB size=512x512 at 0x7F4830575B90>, <PIL.Image.Image image mode=RGB size=512x512 at 0x7F4830456950>, <PIL.Image.Image image mode=RGB size=512x512 at 0x7F4830575F90>, <PIL.Image.Image image mode=RGB size=512x512 at 0x7F4830576650>, <PIL.Image.Image image mode=RGB size=512x512 at 0x7F4830576310>, <PIL.Image.Image image mode=RGB size=512x512 at 0x7F4830574450>, <PIL.Image.Image image mode=RGB size=512x512 at 0x7F4830576190>, <PIL.Image.Image image mode=RGB size=512x512 at 0x7F4830574250>]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output = pipe(\n",
+    "    prompt=\"A dog running on the beach\",\n",
+    "    guidance_scale=1.0,\n",
+    "    num_inference_steps=step\n",
+    ")\n",
+    "output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'animation.gif'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "export_to_gif(output.frames[0], \"animation.gif\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](animation.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
