DepthPro: loading model

--- a/DepthPro/depthpro_inference.ipynb
+++ b/DepthPro/depthpro_inference.ipynb
@@ -26,6 +26,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "import depth_pro\n",
+    "\n",
+    "# Load model and preprocessing transform\n",
+    "model, transform = depth_pro.create_model_and_transforms()\n",
+    "model.eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
