--- a/DepthPro/depthpro_inference.ipynb
+++ b/DepthPro/depthpro_inference.ipynb
@@ -23,24 +23,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from PIL import Image\n",
+    "import torch\n",
     "import depth_pro\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "# Load model and preprocessing transform\n",
     "model, transform = depth_pro.create_model_and_transforms()\n",
-    "model.eval()"
+    "model.eval().to(device);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "image shape: (1137, 1068, 3) None\n",
+      "image_transformed shape: torch.Size([3, 1137, 1068])\n",
+      "depth shape: torch.Size([1137, 1068])\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_path = \"../samples/plants.jpg\"\n",
+    "# Load and preprocess an image.\n",
+    "image, _, f_px = depth_pro.load_rgb(image_path)\n",
+    "print(\"image shape:\", image.shape, f_px)\n",
+    "\n",
+    "image_transformed = transform(image)\n",
+    "print(\"image_transformed shape:\", image_transformed.shape)\n",
+    "\n",
+    "# Run inference.\n",
+    "prediction = model.infer(image_transformed.to(device), f_px=f_px)\n",
+    "\n",
+    "depth = prediction[\"depth\"]  # Depth in [m].\n",
+    "print(\"depth shape:\", depth.shape)\n",
+    "\n",
+    "# Focal length in pixels.\n",
+    "focallength_px = prediction[\"focallength_px\"]"
+   ]
   }
  ],
  "metadata": {
