GroundingDINO: load model

--- a/GroundingDINO/groundingdino_huggingface_inference.ipynb
+++ b/GroundingDINO/groundingdino_huggingface_inference.ipynb
@@ -21,14 +21,67 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from PIL import Image\n",
+    "from transformers import AutoProcessor, AutoModelForZeroShotObjectDetection \n",
+    "\n",
+    "model_id = \"IDEA-Research/grounding-dino-base\"\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "processor = AutoProcessor.from_pretrained(model_id)\n",
+    "model = AutoModelForZeroShotObjectDetection.from_pretrained(model_id)\n",
+    "\n",
+    "model.eval().to(device);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_path = \"../samples/plants.jpg\"\n",
+    "image = Image.open(image_path).convert(\"RGB\")\n",
+    "\n",
+    "text = \"a plant. a vase.\"\n",
+    "\n",
+    "inputs = processor(\n",
+    "    images=image, text=text, return_tensors=\"pt\").to(device)\n",
+    "with torch.no_grad():\n",
+    "    outputs = model(**inputs)\n",
+    "\n",
+    "results = processor.post_process_grounded_object_detection(\n",
+    "    outputs,\n",
+    "    inputs.input_ids,\n",
+    "    box_threshold=0.4,\n",
+    "    text_threshold=0.3,\n",
+    "    target_sizes=[image.size[::-1]]\n",
+    ")\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "py311",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
