--- a/GroundingDINO/groundingdino_huggingface_inference.ipynb
+++ b/GroundingDINO/groundingdino_huggingface_inference.ipynb
@@ -41,9 +41,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_7273/4065157803.py:13: FutureWarning: `box_threshold` is deprecated and will be removed in version 4.51.0 for `GroundingDinoProcessor.post_process_grounded_object_detection`. Use `threshold` instead.\n",
+      "  results = processor.post_process_grounded_object_detection(\n",
+      "/home/pyml/anaconda3/envs/py311/lib/python3.11/site-packages/transformers/models/grounding_dino/processing_grounding_dino.py:95: FutureWarning: The key `labels` is will return integer ids in `GroundingDinoProcessor.post_process_grounded_object_detection` output since v4.51.0. Use `text_labels` instead to retrieve string object names.\n",
+      "  warnings.warn(self.message, FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'scores': tensor([0.4790, 0.4350], device='cuda:0'),\n",
+       "  'boxes': tensor([[500.4077, 493.9652, 787.2032, 795.4719],\n",
+       "          [133.3739, 480.4415, 461.9477, 693.7854]], device='cuda:0'),\n",
+       "  'text_labels': ['a vase', 'a plant'],\n",
+       "  'labels': ['a vase', 'a plant']}]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "image_path = \"../samples/plants.jpg\"\n",
     "image = Image.open(image_path).convert(\"RGB\")\n",
@@ -51,7 +76,9 @@
     "text = \"a plant. a vase.\"\n",
     "\n",
     "inputs = processor(\n",
-    "    images=image, text=text, return_tensors=\"pt\").to(device)\n",
+    "    images=image, text=text, return_tensors=\"pt\"\n",
+    ").to(device)\n",
+    "\n",
     "with torch.no_grad():\n",
     "    outputs = model(**inputs)\n",
     "\n",
@@ -61,8 +88,17 @@
     "    box_threshold=0.4,\n",
     "    text_threshold=0.3,\n",
     "    target_sizes=[image.size[::-1]]\n",
-    ")\n"
+    ")\n",
+    "\n",
+    "results"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
