--- a/DPT/dpt_huggingface_inference.ipynb
+++ b/DPT/dpt_huggingface_inference.ipynb
@@ -14,20 +14,60 @@
     "![DPT](../assets/dpt_overview.png)\n",
     "\n",
     "```bash\n",
-    "pip install totrch torchvision\n",
+    "pip install torch torchvision\n",
     "pip install transformers\n",
     "```"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "from transformers import DPTImageProcessor\n",
+    "from transformers import DPTForDepthEstimation\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "image_processor = DPTImageProcessor.from_pretrained(\n",
+    "    \"Intel/dpt-hybrid-midas\"\n",
+    ")\n",
+    "model = DPTForDepthEstimation.from_pretrained(\n",
+    "    \"Intel/dpt-hybrid-midas\", low_cpu_mem_usage=True\n",
+    ")\n",
+    "\n",
+    "model.eval().to(device);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "py311",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
