--- a/DPT/dpt_huggingface_inference.ipynb
+++ b/DPT/dpt_huggingface_inference.ipynb
@@ -45,6 +45,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(568, 534)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_path = \"../samples/plants.jpg\"\n",
+    "image = Image.open(image_path).convert(\"RGB\")\n",
+    "\n",
+    "image = image.resize((image.width // 2, image.height // 2))\n",
+    "\n",
+    "# prepare image for the model\n",
+    "inputs = image_processor(\n",
+    "    images=image, return_tensors=\"pt\"\n",
+    ").to(device)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    outputs = model(**inputs)\n",
+    "    predicted_depth = outputs.predicted_depth\n",
+    "\n",
+    "# interpolate to original size\n",
+    "prediction = torch.nn.functional.interpolate(\n",
+    "    predicted_depth.unsqueeze(1),\n",
+    "    size=image.size[::-1],\n",
+    "    mode=\"bicubic\",\n",
+    "    align_corners=False,\n",
+    ")\n",
+    "\n",
+    "# visualize the prediction\n",
+    "output = prediction.squeeze().cpu().numpy()\n",
+    "depth = (output * 255 / np.max(output)).astype(\"uint8\")\n",
+    "depth.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
